--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
     <div class = banner>
 		    <header class = flexItem>
-          <h1>Tea Cozy</h1>
+          <img src = 'assets\img-tea-cozy-logo.webp' alt = 'Tea Cozy Logo' class = 'logo'>
 		    </header>
 		    <nav>
           <ul class = flexItem>
@@ -27,7 +27,7 @@
       </div>
       <h2>Tea of the Month</h2>
       <h4>What's Steeping at The Tea Cozy<h4>
-      <article class = 'teaOfTheMonth' id ='featuredTea'>
+      <section class = 'teaOfTheMonth' id ='featuredTea'>
         <figure>
           <img src = 'assets/img-berryblitz.webp'>
           <figcaption>Fall Berry Blitz Tea</figcaption>
@@ -48,32 +48,32 @@
           <img src = 'assets\img-bedford-bizarre.webp'>
           <figcaption>Bedford Bizarre Tea</figcaption>
         </figure>
-      </article>
-        <article class = 'locations' id = 'locations'>
+      </section>
+        <section class = 'locations' id = 'locations'>
             <div class = 'title'>
               <h2>locations<h2>
             </div>
             <div class = 'cards'>
-              <div class = 'adress'>
-              <h3>Downtown</h3>
-              <p>384 West 4th ST</p>
-              <p>Suite 108</p>
-              <p>Portland, Maine</p>
-            </div>
-            <div class = 'adress'>
-              <h3>East Bayside</h3>
-              <p>3433 Phiserman's Avenue</p>
-              <p>(Northwest Corner)</p>
-              <p>Portland, Maine</p>
-            </div>
-            <div class = 'adress'>
-              <h3>Oakdale</h3>
-              <p>515 Crescent Avenue</p>
-              <p>Second Floor</p>
-              <p>Portland, Maine</p>
-            </div>
+	            <div class = 'adress'>
+	              <h3>Downtown</h3>
+	              <p>384 West 4th ST</p>
+	              <p>Suite 108</p>
+	              <p>Portland, Maine</p>
+	            </div>
+	            <div class = 'adress'>
+	              <h3>East Bayside</h3>
+	              <p>3433 Phiserman's Avenue</p>
+	              <p>(Northwest Corner)</p>
+	              <p>Portland, Maine</p>
+	            </div>
+	            <div class = 'adress'>
+	              <h3>Oakdale</h3>
+	              <p>515 Crescent Avenue</p>
+	              <p>Second Floor</p>
+	              <p>Portland, Maine</p>
+	            </div>
           </div>
-        </article>
+        </section>
      <div class = 'contact'>
        <h2>The Tea Cozy</h2>
        <h5>contact@theteacozy.com</h5>
